--- a/php/style.css
+++ b/php/style.css
@@ -96,3 +96,26 @@ footer a {
   color: #333;
   text-decoration: underline;
 }
+
+/* form */
+
+table td {
+  padding: 8px;
+}
+
+form label {
+  width: 100%;
+  margin-right: 5px;
+  text-align: end;
+}
+
+form input {
+  width: 400px;
+}
+
+.error_msg {
+  color: rgb(160, 0, 0);
+  background-color: rgb(246, 148, 148);
+  padding: 8px 30px 8px 30px;
+  margin: 0 20px 0 20px;
+}
