--- a/php/style.css
+++ b/php/style.css
@@ -113,9 +113,18 @@ form input {
   width: 400px;
 }
 
+.error_msg,
+.success_msg {
+  padding: 8px 30px 8px 30px;
+  margin: 0 20px 0 20px;
+}
+
 .error_msg {
   color: rgb(160, 0, 0);
   background-color: rgb(246, 148, 148);
-  padding: 8px 30px 8px 30px;
-  margin: 0 20px 0 20px;
+}
+
+.success_msg {
+  color: rgb(0, 77, 0);
+  background-color: rgb(159, 255, 159);
 }
