--- a/php/style.css
+++ b/php/style.css
@@ -51,6 +51,25 @@ main {
   padding-top: 5px;
 }
 
+.pagination_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
+
+.pagination_pages {
+  display: flex;
+  gap: 15px;
+  padding: 10px;
+}
+
+.bold {
+  font-weight: 800;
+  color: #333;
+  text-decoration: underline;
+}
+
 .book {
   border: 1px solid #808d9a;
   padding: 10px;
